--- a/css/style.css
+++ b/css/style.css
@@ -196,3 +196,9 @@ ul.social-footer2 li a {display: block;	height:30px;width: 30px;text-align: cent
     transition: all 250ms ease-in-out 0s;
 
 }
+
+.leri{
+    padding-left:0px;
+    padding-right:0px;
+}
+
