--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@
  }
 
 #total  .bg  .cps img{
-    width:25%;
+    width:51%;
     /*padding-bottom: 185px;*/
 }
 
@@ -39,7 +39,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(to bottom,#1a264d 0%,rgba(26,38,77,.2) 100%);
+    background: linear-gradient(to bottom,#1a264d  0%,rgba(26,38,77,.2) 100%);
 
 }
 
@@ -55,6 +55,7 @@
     border-radius:15px;
     border:0px;
     outline:none;
+    margin-bottom:25px;
 }
 
 #point  .img-hover p{
@@ -117,6 +118,18 @@ h1 {
     font-style: bold;
 }
 
+@media (max-width: 768px) {
+    #total  .bg  .txt{
+        display:none;
+    }
+}
+
+
+@media (max-width: 768px) {
+    #total  .bg  .txt  .txt2{
+        font-size:12px;
+    }
+}
 
 /*====================
 	Footer
