--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,6 @@
     background-position: center bottom!important;
     padding-top: 50px;
     padding-left: 50px;
-    height: 431px;
  }
 
 #total  .bg  .cps img{
@@ -121,8 +120,8 @@ h1 {
 }
 
 @media (max-width: 768px) {
-    #total  .bg  .txt{
-        display:none;
+    #total  .bg  .txt  .txt1{
+        font-size:12px;
     }
 }
 
