--- a/css/style.css
+++ b/css/style.css
@@ -127,6 +127,11 @@ h1 {
         padding-left:40px;
         padding-right:40px;
     }
+    #footer  .widget{
+        margin-bottom:40px;
+        padding-left:40px;
+        padding-right:40px;
+    }
 }
 
 
