--- a/css/style.css
+++ b/css/style.css
@@ -219,5 +219,6 @@ ul.social-footer2 li a {display: block;	height:30px;width: 30px;text-align: cent
 .leri{
     padding-left:0px;
     padding-right:0px;
+    margin-top: 33px;
 }
 
